@startuml

title __LAB3's Class Diagram__\n

  namespace com.game {
    class com.game.Main {
    }
  }
  

  namespace com.game {
    namespace model {
      class com.game.model.Armored {
      }
    }
  }
  

  namespace com.game {
    namespace model {
      class com.game.model.Doctor {
      }
    }
  }
  

  namespace com.game {
    namespace model {
      class com.game.model.Droid {
      }
    }
  }
  

  namespace com.game {
    namespace model {
      class com.game.model.Wild {
      }
    }
  }
  

  namespace com.game {
    namespace ñontoller {
      class com.game.ñontoller.arena {
      }
    }
  }
  

  com.game.model.Armored -up-|> com.game.model.Droid
  com.game.model.Doctor -up-|> com.game.model.Droid
  com.game.model.Wild -up-|> com.game.model.Droid


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
